--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -2,7 +2,7 @@
     <div class="jumbotron"> 
       <!--<img src="./images/heart.png" alt="" class="leadTitle">-->
       <h1 class="">{{TITLE}}</h1>
-      <p class="tagline">A collection of <moments></moments> that make your heart swell.</p>
+      <p class="tagline">A collection of images that make your heart swell.</p>
     </div>
 </div>
 
