--- a/client/partials/users.html
+++ b/client/partials/users.html
@@ -2,7 +2,7 @@
     <div class="grid"  masonry="{columnWidth:210, gutter: 10, stagger: 30, transitionDuration: '0.6s'}">
         <div class="masonry-brick" ng-repeat="Bumper in userBumper track by $index">
             <div>
-                <img src="{{Bumper.imgUrl}}" alt="{{Bumper.title}}" class="myBumperSearchImg" onerror=”this.src=’/images/missing.png’;”>
+                <img ng-attr-src="{{Bumper.imgUrl}}" alt="{{Bumper.title}}" class="myBumperSearchImg">
             </div>
             <div class="">  
                 <h3 class="bumperSearchTitle">{{Bumper.title}}</h3>
