--- a/client/css/style.css
+++ b/client/css/style.css
@@ -31,10 +31,10 @@ a:hover {
 .addForm {
     padding:10px;
 }
-.myBumperInfo {
+.myItemInfo {
     padding: 0 10px 10px 10px;
 }
-.myBumperName {
+.myItemName {
     width: 104px;
     float: left;
     overflow: hidden;
@@ -50,7 +50,7 @@ a:hover {
         width: 30px;
     float: left;
 }
-.myBumperInput {
+.myItemInput {
     border-radius: 8px;
   width: 210px;
   height: 515px;
@@ -70,7 +70,7 @@ a:hover {
     background:#e9e9e9;
 }
 
-.bumperSearchTitle  {
+.itemSearchTitle  {
     text-align: center;
 }
 
@@ -104,7 +104,7 @@ a:hover {
   clear: both;
 }
 
-/* ---- grid-bumper ---- */
+/* ---- grid-item ---- */
 
 .masonry-brick{
     border-radius: 8px;
@@ -115,7 +115,7 @@ a:hover {
     margin:5px;
 }
 
-.myBumperSearchImg {
+.myItemSearchImg {
     width: 100%;
     border-radius: 4px;
 }
@@ -185,7 +185,7 @@ a:hover {
     padding: 0;
 }
 
-.removeBumper {
+.removeItem {
     position: absolute;
     top: -1px;
 }
@@ -309,7 +309,7 @@ position: relative;
         padding-left: 15px;
         color: #F5F5F5;
 }
-.yourBumper {
+.yourItem {
 /*background: #4a8b91;*/
     padding-bottom: 50px;
     border-bottom: 2px solid #bdbdbd;
