--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -13,25 +13,25 @@
           <div class="panel-title"><h3 class="panelheadings">Recently Added</h3> </div>
         
         <div  masonry="{columnWidth:210, gutter: 10, stagger: 30, transitionDuration: '0.6s'}" >
-            <div class="masonry-brick" ng-repeat="Bumper in selectedBumper track by $index">
+            <div class="masonry-brick" ng-repeat="Item in selectedItem track by $index">
                 <div class="">
-                    <img ng-attr-src="{{Bumper.imgUrl}}" alt="{{Bumper.title}}" class="myBumperSearchImg">
+                    <img ng-attr-src="{{Item.imgUrl}}" alt="{{Item.title}}" class="myItemSearchImg">
                 </div>
                 <div class="">  
-                    <h3 class="bumperSearchTitle">{{Bumper.title}}</h3>
+                    <h3 class="itemSearchTitle">{{Item.title}}</h3>
                 </div>
-                <div class="myBumperInfo">                
-                    <div class="myBumperName">
-                        <p class="author"><a href="#/users/{{Bumper.authorID}}">{{Bumper.authorName}}</a></p>
+                <div class="myItemInfo">                
+                    <div class="myItemName">
+                        <p class="author"><a href="#/users/{{Item.authorID}}">{{Item.authorName}}</a></p>
                     </div>   
                     <form class="form-like">
                         <div class="form-group">
-                            <p class="likedby"><i class="fa fa-heart faSpacer" ng-class="{ 'fa-heart-highlight': highlight(Bumper.likeby) }"></i>{{ count(Bumper.likeby) }}</p>
+                            <p class="likedby"><i class="fa fa-heart faSpacer" ng-class="{ 'fa-heart-highlight': highlight(Item.likeby) }"></i>{{ count(Item.likeby) }}</p>
                         </div>
                     </form>
                     <form class="form-repost">
                         <div class="form-group">
-                            <p class="repostedby"><i class="fa fa-refresh fa-repost faSpacer" ng-class="{ 'fa-repost-highlight': highlight(Bumper.repostedby) }"></i>{{ count(Bumper.repostedby) }}</p>
+                            <p class="repostedby"><i class="fa fa-refresh fa-repost faSpacer" ng-class="{ 'fa-repost-highlight': highlight(Item.repostedby) }"></i>{{ count(Item.repostedby) }}</p>
                         </div>
                     </form>                
                 </div> 
