--- a/client/partials/recentItem.html
+++ b/client/partials/recentItem.html
@@ -1,19 +1,19 @@
 <div class="col-md-12 fullsize yourItem">
-    <div class="grid"  masonry="{columnWidth:210, gutter: 10, stagger: 30, transitionDuration: '0.6s'}">
-        <div class="masonry-brick" ng-repeat="Item in userItem track by $index">
-            <div>
+    <div class="gridRecent" masonry="{columnWidth:210, gutter: 10, stagger: 30, transitionDuration: '0.6s'}">
+        <div class="masonry-brick" ng-repeat="Item in recentItem track by $index">
+            <div class="">
                 <img ng-attr-src="{{Item.imgUrl}}" alt="{{Item.title}}" class="myItemSearchImg">
             </div>
             <div class="">  
                 <h3 class="itemSearchTitle">{{Item.title}}</h3>
             </div>
-            <div class="myItemInfo">
+            <div class="myItemInfo">                
                 <div class="myItemName">
-                    <p class="author">{{Item.authorName}}</p>
-                </div>                 
+                    <p class="author"><a href="#/users/{{Item.authorID}}">{{Item.authorName}}</a></p>
+                </div>   
                 <form class="form-like" ng-click="likeItem(Item._id)">
                     <div class="form-group">
-                        <p class="likedby"><i class="fa fa-heart faSpacer" ng-class="{ 'fa-heart-highlight': highlight(Item.likeby) }"></i>{{ count(Item.likeby) }}</p>
+                    <p class="likedby"><i class="fa fa-heart faSpacer" ng-class="{ 'fa-heart-highlight': highlight(Item.likeby) }"></i>{{ count(Item.likeby) }}</p>
                     </div>
                 </form>
                 <form class="form-repost" ng-click="repostItem(Item._id)">
@@ -21,7 +21,8 @@
                         <p class="repostedby"><i class="fa fa-refresh fa-repost faSpacer" ng-class="{ 'fa-repost-highlight': highlight(Item.repostedby) }"></i>{{ count(Item.repostedby) }}</p>
                     </div>
                 </form>  
-            </div>
+            </div>              
         </div>
     </div>
 </div>
+
