--- a/client/css/style.css
+++ b/client/css/style.css
@@ -363,3 +363,9 @@ position: relative;
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+@media only screen and (max-width: 850px) {
+    .jumbotron h1 {
+        font-size: 5rem;
+    }
+}
